--- a/index.html
+++ b/index.html
@@ -5,13 +5,225 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- -------bootstrap stylesheet-------- -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>this is panda</h1>
-    
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Shoes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Backpack</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Subscribe</a>
+                        </li>
+                </div>
+            </div>
+        </nav>
+        <!-- ---------Carousel------- -->
+        <section class="container">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row d-flex align-items-center justify-content-between p-5" style="background-color: #FEEAE9;">
+                            <div class="col-lg-7">
+                                <h1>Mi LED TV 4A PRO 32</h1>
+                                <p>
+                                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                                    officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+                                    amet.
+                                </p>
+                                <p style="color: #FF136F; font-size: 40px; font-weight: 500;">$1289</p>
+                                <button type="button" class="btn btn-danger btn-lg">BUY NOW</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row d-flex align-items-center justify-content-between p-5" style="background-color: #FEEAE9;">
+                            <div class="col-lg-7">
+                                <h1>Mi LED TV 4A PRO 32</h1>
+                                <p>
+                                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                                    officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+                                    amet.
+                                </p>
+                                <p style="color: #FF136F; font-size: 40px; font-weight: 500;">$1289</p>
+                                <button type="button" class="btn btn-danger btn-lg">BUY NOW</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row d-flex align-items-center justify-content-between p-5" style="background-color: #FEEAE9;">
+                            <div class="col-lg-7">
+                                <h1>Mi LED TV 4A PRO 32</h1>
+                                <p>
+                                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                                    officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+                                    amet.
+                                </p>
+                                <p style="color: #FF136F; font-size: 40px; font-weight: 500;">$1289</p>
+                                <button type="button" class="btn btn-danger btn-lg">BUY NOW</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+    </header>
+    <main>
+        <section class="container overflow-hidden my-5">
+            <div class="row gx-5">
+                <div class="col-lg-4 col-md-6 col-sm-12-lg-4 col-lg-4 col-md-6 col-sm-12-md-6 col-lg-4 col-md-6 col-sm-12-sm-12-lg-4 col-lg-4 col-md-6 col-sm-12-lg-4 col-lg-4 col-md-6 col-sm-12-md-6 col-lg-4 col-md-6 col-sm-12-sm-12-md-6 col-lg-4 col-md-6 col-sm-12-lg-4 col-lg-4 col-md-6 col-sm-12-md-6 col-lg-4 col-md-6 col-sm-12-sm-12-sm-12">
+                    <div class="p-2 ps-4 border rounded-3 bg-info d-flex align-items-center justify-content-between">
+                        <h1>Watch</h1>
+                        <img src="images/categories/watch.png" width="100" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12-lg-4 col-lg-4 col-md-6 col-sm-12-md-6 col-lg-4 col-md-6 col-sm-12-sm-12-lg-4 col-lg-4 col-md-6 col-sm-12-lg-4 col-lg-4 col-md-6 col-sm-12-md-6 col-lg-4 col-md-6 col-sm-12-sm-12-md-6 col-lg-4 col-md-6 col-sm-12-lg-4 col-lg-4 col-md-6 col-sm-12-md-6 col-lg-4 col-md-6 col-sm-12-sm-12-sm-12">
+                    <div class="p-2 ps-4 border rounded-3 bg-info d-flex align-items-center justify-content-between">
+                        <h1>Watch</h1>
+                        <img src="images/categories/watch.png" width="100" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12-lg-4 col-lg-4 col-md-6 col-sm-12-md-6 col-lg-4 col-md-6 col-sm-12-sm-12-lg-4 col-lg-4 col-md-6 col-sm-12-lg-4 col-lg-4 col-md-6 col-sm-12-md-6 col-lg-4 col-md-6 col-sm-12-sm-12-md-6 col-lg-4 col-md-6 col-sm-12-lg-4 col-lg-4 col-md-6 col-sm-12-md-6 col-lg-4 col-md-6 col-sm-12-sm-12-sm-12">
+                    <div class="p-2 ps-4 border rounded-3 bg-info d-flex align-items-center justify-content-between">
+                        <h1>Watch</h1>
+                        <img src="images/categories/watch.png" width="100" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container">
+            <h2>Shoes</h2>
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                  <div class="card border-0 shadow p-3 mb-5 bg-body rounded h-90">
+                    <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Red Laltu Bag</h5>
+                      <p style="color: #FF136F; font-size: 40px; font-weight: 500;">$120</p>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <div class="m-3">
+                        <button type="button" class="btn btn-danger btn-lg">BUY NOW</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                  <div class="card border-0 shadow p-3 mb-5 bg-body rounded h-90">
+                    <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Red Laltu Bag</h5>
+                      <p style="color: #FF136F; font-size: 40px; font-weight: 500;">$120</p>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <div class="m-3">
+                        <button type="button" class="btn btn-danger btn-lg">BUY NOW</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                  <div class="card border-0 shadow p-3 mb-5 bg-body rounded h-90">
+                    <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Red Laltu Bag</h5>
+                      <p style="color: #FF136F; font-size: 40px; font-weight: 500;">$120</p>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <div class="m-3">
+                        <button type="button" class="btn btn-danger btn-lg">BUY NOW</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </section>
+        <section class="container">
+            <h2>Backpack</h2>
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                  <div class="card border-0 shadow p-3 mb-5 bg-body rounded h-90">
+                    <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Red Laltu Bag</h5>
+                      <p style="color: #FF136F; font-size: 40px; font-weight: 500;">$120</p>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <div class="m-3">
+                        <button type="button" class="btn btn-danger btn-lg">BUY NOW</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                  <div class="card border-0 shadow p-3 mb-5 bg-body rounded h-90">
+                    <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Red Laltu Bag</h5>
+                      <p style="color: #FF136F; font-size: 40px; font-weight: 500;">$120</p>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <div class="m-3">
+                        <button type="button" class="btn btn-danger btn-lg">BUY NOW</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                  <div class="card border-0 shadow p-3 mb-5 bg-body rounded h-90">
+                    <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Red Laltu Bag</h5>
+                      <p style="color: #FF136F; font-size: 40px; font-weight: 500;">$120</p>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <div class="m-3">
+                        <button type="button" class="btn btn-danger btn-lg">BUY NOW</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </section>
+    </main>
+
     <!-- ----------bootstrap javascript-------- -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
