--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <!-- -------bootstrap stylesheet-------- -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <!-- ---------custom stylesheet-------- -->
+        <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 
@@ -217,6 +219,15 @@
                   </div>
                 </div>
               </div>
+        </section>
+        <section class="container py-5 bg-danger d-flex justify-content-center">
+            <div>
+                <h2>LET'S STAY IN TOUCH</h2>
+                <p>Get updates on sales specials and more</p>
+                <input  class="form-control" type="text" placeholder="Enter Your Email">
+                <br>
+                <button  type="button" class="btn btn-info">Send</button>
+            </div>
         </section>
     </main>
 
